--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -6,21 +6,33 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
-        <RootNamespace>Main</RootNamespace>
     </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Release' " />
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' "/>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' " />
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' "/>
 
     <ItemGroup>
-      <ProjectReference Include="..\Parser\Parser.csproj" />
+        <ProjectReference Include="..\Parser\Parser.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
-      <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-      <PackageReference Include="WindowsAPICodePack" Version="8.0.6" />
+        <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
+        <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135"/>
+        <PackageReference Include="WindowsAPICodePack" Version="8.0.6"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="LightsUI\LightEditWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="LightsUI\LightsSettingsWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
     </ItemGroup>
 
 </Project>
