--- a/Parser/Parser.csproj
+++ b/Parser/Parser.csproj
@@ -17,6 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
         <PackageReference Include="StbImageSharp" Version="2.30.15"/>
     </ItemGroup>
 
